<resources>
    <string name="app_name">Connect Four - Team 19</string>
    <string name="welcome_text">Welcome to Team 19\'s Connect 4</string>
    <string name="start_game">Start Game</string>
    <string name="enter_player_1">Enter Player 1</string>
    <string name="enter_player_2">Enter Player 2</string>
    <string name="enter_username">Enter Username </string>
    <string name="enter_password">Enter Password</string>
    <string name="renter_password">Re-Enter Password</string>
    <string name="player_1_turn">Player 1\'s Turn</string>
    <string name="undo">Undo</string>
    <string name="end_turn">End Turn</string>
    <string name="how_to">How to Play</string>
    <string name="how_to_desc">Welcome! Take turn placing pieces on the board, the goal is to get four of your pieces to line up, either vertically, horizontally, or diagonally, while also blocking your opponent from doing the same. Tap a column of the board to place your piece in it. You can use the Undo button to replace it if needed, but once you are confident that you\'ve played the best move, press the End Turn button to start your opponents turn. Good luck\!</string>
    <string name="active_label">%1$s\'s turn</string>
    <string name="player_invalid_move">Not a valid move!</string>
    <string name="player_invalid_undo">No valid move to undo!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="back">Back</string>
    <string name="surrender">Surrender</string>
    <string name="dummyWin">%1$s Won, %2$s Lost!</string>
    <string name="play_again">Play Again</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="sign_up_prompt">Please Enter Your Username and Password</string>
    <string name="signup_fail">Failed to Successfully Signup</string>
    <string name="endturn_fail">Error processing turn, ensure move is valid</string>
    <string name="submit">Submit</string>
    <string name="waiting">Waiting for other player</string>
    <string name="saving_user_fail">Failed to sign up</string>
    <string name="saving_user_success">Signed up successfully</string>
    <string name="empty_field">Please fill out all required fields</string>
    <string name="wrong_field">Passwords must match for sign up</string>
    <string name="loading_user_fail">Failed to log in</string>
    <string name="loading_user_success">Logged in successfully</string>
    <string name="remember_login">Remember This Login</string>
    <string name="host_left_room">Host left the room</string>
</resources>